# DevSync

backend/: .env  .gitignore  manage.py  pyproject.toml
backend/DevSync/: asgi.py  settings.py  urls.py  wsgi.py
backend/authentication/: admin.py  exception_handler.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_user_options_and_more.py
backend/core/: throttles.py  views.py
backend/dashboard/: serializers.py  urls.py  views.py
backend/github_integration/: __init__.py  adapter.py  admin.py  apps.py  models.py  serializers.py  sync.py  tasks.py  urls.py  views.py
backend/github_integration/migrations/: 0001_initial.py  0002_alter_githubprofile_avatar_url_and_more.py  0003_alter_githubprofile_access_token.py  0004_alter_repository_created_at_github_and_more.py  0005_commit_github_inte_sha_ece264_idx_and_more.py  0006_remove_repository_languages_alter_commit_additions_and_more.py  0007_alter_repository_unique_together_alter_commit_sha_and_more.py  0008_remove_commit_additions_remove_commit_deletions_and_more.py  0009_githubsynclog_stats_synced.py  0010_remove_githubsynclog_stats_synced_and_more.py
backend/portfolios/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolios/migrations/: 0001_initial.py  0002_portfoliosection_portfolios__user_id_bdf1a3_idx_and_more.py  0003_alter_portfoliosettings_min_stars_to_show.py  0005_skill_order.py  (+1 more)
backend/templates/: base.html
backend/themes/: admin.py  models.py  presets.py  serializers.py  urls.py  views.py
(+9 files in other folders)
